# ssd_capture

./: CMakeLists.txt  README.md
include/: ImageConsumer.hpp  detection.hpp  setting.hpp
param/: param.xml  param_config.xml
src/: ImageConsumer.cpp  RMVideoCapture.cpp  main.cpp
